--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/sass": "^1.16.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "@upleveled/eslint-config-upleveled": "1.15.2",
