--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/sass": "^1.16.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
-    "@upleveled/eslint-config-upleveled": "1.15.2",
+    "@upleveled/eslint-config-upleveled": "^1.15.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.23.0",
     "eslint-config-react-app": "^6.0.0",
